[package]
name = "over-the-wire-wargames"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
async-ssh2-tokio = "0.7.1"
async-trait = "0.1.73"
config = "0.13.3"
paste = "1.0.14"
russh = "0.38.0"
russh-keys = "0.38.0"

[dev-dependencies]
tokio = "1.32.0"
